--- a/_sass/navigation.scss
+++ b/_sass/navigation.scss
@@ -3,23 +3,19 @@ nav {
     margin-bottom: 10vh;
     // width: 300px;
     text-align: center;
-    margin-left: auto;
-    margin-right: auto;
 }
 
 .nav_button {
 	bottom: 0;
 	border: 1px solid coral;
 	width: 50px;
-	// margin-left: auto;
-	// margin-right: auto;
 	margin-bottom: 10px;
 }
 
 .nav_button a{
     font-family: 'Mulish', sans-serif;
     text-decoration: none;
-    color: darkgray;
+    color: lightgrey;
 }
 
 .socials {
